--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TodoMinimalWebApp
 @using TodoMinimalWebApp.Models
+@using TodoMinimalWebApp.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
